feat: enhance error handling in authentication and Spotify services